Bug 654698 - Overlap the border on select elements correctly in RTL; r=jimm